src/objects/Conventional_Debt__c.object
<CustomObject>
    <description>LPAM - Part of a Funding Source.</description>
    <fields>
        <fullName>Accrued_Interest__c</fullName>
        <label>Accrued Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Debt_Service__c</fullName>
        <formula>Monthly_Debt_Service__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conventional Debts</relationshipLabel>
        <relationshipName>Conventional_Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Source_Type__c</fullName>
        <label>Funding Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>Subordinate</fullName>
                </value>
                <value>
                    <fullName>HCD</fullName>
                </value>
                <value>
                    <fullName>CalHFA</fullName>
                </value>
                <value>
                    <fullName>HUD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <description>The interest rate for a loan</description>
        <inlineHelpText>Enter the Interest Rate for this loan</inlineHelpText>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <label>Interest Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Compound</fullName>
                </value>
                <value>
                    <fullName>Amoritized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Information_Source__c</fullName>
        <label>Loan Information Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Debt_Service__c</fullName>
        <label>Monthly Debt Service</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Loan_Amount__c</fullName>
        <description>The Original Loan Amount for the Loan</description>
        <inlineHelpText>Enter the Original Loan Amount for this Loan</inlineHelpText>
        <label>Original Loan Amount</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Loan_Type__c</fullName>
        <label>Other Loan Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <inlineHelpText>This feeds the roll-up for the Project Outstanding Balance</inlineHelpText>
        <label>Outstanding Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipLabel>Conventional Debts</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <label>Total Payments</label>
        <summarizedField>Conventional_Debt_Payment_Balance__c.Amount__c</summarizedField>
        <summaryForeignKey>Conventional_Debt_Payment_Balance__c.Conventional_Debt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Principle_Paid__c</fullName>
        <label>Total Principle Paid</label>
        <summarizedField>Conventional_Debt_Payment_Balance__c.Principle__c</summarizedField>
        <summaryForeignKey>Conventional_Debt_Payment_Balance__c.Conventional_Debt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Conventional Debt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CVLN-{00000}</displayFormat>
        <label>LoanID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conventional Debts</pluralLabel>
    <recordTypes>
        <fullName>Funding_Source_Type</fullName>
        <active>true</active>
        <description>Determins if this is an SDHC Funding Source or Other</description>
        <label>Funding Source Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>